--- a/css/main.css
+++ b/css/main.css
@@ -24,18 +24,30 @@ body {
   color: #aaa;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+h1 a {
+  display: block;
   color: #aaa;
   border-bottom: 1px solid #333;
-  margin: 0;
   padding: 10px;
+  text-decoration: none;
 }
 
 a {
-  color: #007aff;
+  color: #1e8ad6;
 }
 
-#stories {
+#stories,
+#comments {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -46,4 +58,38 @@ a {
   padding: 10px;
   border-bottom: 1px solid #333;
   text-decoration: none;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+#comments li {
+  padding: 10px;
+  border-bottom: 1px solid #333;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+#story {
+  padding: 10px;
+  border-bottom: 2px solid #333;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.spinner {
+  border: 3px solid #333;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: #08c;
+  animation: spin 1s linear infinite;
+  margin: 10px auto 0;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
