--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,6 @@ ul {
   font-size: 14px;
   line-height: 1.3;
   color: #aaa;
-  margin-bottom: 5px;
 }
 .story-thumb {
   width: 80px;
@@ -92,6 +91,7 @@ ul {
 .story-links {
   display: flex;
   gap: 10px;
+  margin-top: 5px;
 }
 
 /* Comments */
