--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 14px;
-  background-color: #222;
+  background-color: #111;
   color: #fff;
 }
 
@@ -64,11 +64,11 @@ ul {
 /* Story list */
 #stories li,
 #story {
-  padding: 10px;
+  padding: 15px 10px;
   border-bottom: 1px solid #333;
 }
 .story-title {
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 5px;
   color: #1e8ad6;
 }
@@ -82,6 +82,7 @@ ul {
   width: 80px;
   float: right;
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 .story-detail {
   font-size: 12px;
@@ -97,7 +98,7 @@ ul {
 /* Comments */
 
 #comments li {
-  padding: 10px;
+  padding: 15px 10px;
   border-bottom: 1px solid #333;
   font-size: 14px;
   line-height: 1.3;
@@ -105,9 +106,10 @@ ul {
 .comment-karma {
   float: right;
   color: #aaa;
+  font-size: 12px;
 }
 .comment-medal {
-  font-size: 22px;
+  font-size: 24px;
   vertical-align: top;
 }
 .comment-detail {
