--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 14px;
-  background-color: #111;
+  background-color: #303030;
   color: #fff;
 }
 
@@ -36,7 +36,8 @@ p {
 
 h1 {
   color: #aaa;
-  border-bottom: 1px solid #333;
+  background-color: #212121;
+  border-bottom: 0px solid #333;
   padding: 15px 10px;
   font-size: 22px;
 }
@@ -65,21 +66,22 @@ ul {
 #stories li,
 #story {
   padding: 15px 10px;
-  border-bottom: 1px solid #333;
+  border-bottom: 0px solid #333;
 }
 .story-title {
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 5px;
-  color: #1e8ad6;
+  color: #fff;
+  line-height: 1.3;
 }
 .story-content,
 .comment-content {
   font-size: 14px;
   line-height: 1.3;
-  color: #fff;
+  color: #f3f3f3;
 }
 .story-thumb {
-  width: 80px;
+  width: 30%;
   float: right;
   margin-left: 10px;
   margin-bottom: 10px;
@@ -87,6 +89,13 @@ ul {
 .story-detail {
   font-size: 12px;
   margin-bottom: 5px;
+  color: #aaa;
+}
+.story-bottom {
+  display: flex;
+  gap: 10px;
+  font-size: 12px;
+  margin-top: 5px;
   color: #aaa;
 }
 .story-links {
@@ -99,7 +108,7 @@ ul {
 
 #comments li {
   padding: 15px 10px;
-  border-bottom: 1px solid #333;
+  border-bottom: 0px solid #333;
   font-size: 14px;
   line-height: 1.3;
 }
