--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,6 @@ p {
 h1 {
   color: #aaa;
   background-color: #212121;
-  border-bottom: 0px solid #333;
   padding: 15px 10px;
   font-size: 22px;
 }
@@ -66,7 +65,6 @@ ul {
 #stories li,
 #story {
   padding: 15px 10px;
-  border-bottom: 0px solid #333;
 }
 .story-title {
   font-size: 16px;
@@ -108,7 +106,6 @@ ul {
 
 #comments li {
   padding: 15px 10px;
-  border-bottom: 0px solid #333;
   font-size: 14px;
   line-height: 1.3;
 }
@@ -130,6 +127,9 @@ ul {
   width: 18px;
   height: 18px;
   vertical-align: -4px;
+}
+.comment-id:target {
+  border: 3px solid #ffff88;
 }
 
 .spinner {
